--- a/templates/vault-agent.initd.erb
+++ b/templates/vault-agent.initd.erb
@@ -6,7 +6,7 @@
 # processname: vault-agent
 # description: Init.d script for Vault Project Agent
 # pidfile: /var/run/vault-agent.pid
-# config: <%= scope['vault::config_dir'] %>/agent_config.json
+# config: <%= scope['vault::config_dir'] %>/agent-config.json
 ###########################################################################################################
 # this file has been put in place by the jsok/vault Puppet module (https://forge.puppetlabs.com/jsok/vault)
 # any changes will be overwritten if Puppet is run again
@@ -37,7 +37,7 @@ lockfile="/var/lock/subsys/${prog}"
 pidfile="/var/run/${prog}.pid"
 logfile="/var/log/${prog}.log"
 sysconfig="/etc/sysconfig/${prog}"
-conffile="<%= scope['vault::config_dir'] %>/agent_config.json"
+conffile="<%= scope['vault::config_dir'] %>/agent-config.json"
 
 [ -f $sysconfig ] && . $sysconfig
 
@@ -50,6 +50,7 @@ start() {
     echo -n $"Starting $prog: "
     touch $logfile $pidfile
     chown <%= scope['vault::agent::user'] %> $logfile $pidfile
+     export VAULT_ADDR=${VAULT_ADDR:-<%= scope['vault::agent::vault_addr'] %>}
     daemon --user <%= scope['vault::agent::user'] %> "{ $exec agent -config=$conffile $OPTIONS &>> $logfile & }; echo \$! >| $pidfile"
 
     RETVAL=$?
