--- a/templates/vault-agent.upstart.erb
+++ b/templates/vault-agent.upstart.erb
@@ -8,13 +8,14 @@ start on (local-filesystems and net-device-up IFACE!=lo)
 stop on runlevel [06]
 
 env VAULT=<%= scope['vault::bin_dir'] %>/vault
-env CONFIG=<%= scope['vault::config_dir'] %>/agent_config.json
+env CONFIG=<%= scope['vault::config_dir'] %>/agent-config.json
 env USER=<%= scope['vault::agent::user'] %>
 env GROUP=<%= scope['vault::agent::group'] %>
 env PID_FILE=/var/run/vault-agent.pid
 env LOG_FILE=/var/log/vault-agent.log
 
 script
+    export VAULT_ADDR=${VAULT_ADDR:-<%= scope['vault::agent::vault_addr'] %>}
     [ -e /etc/default/$UPSTART_JOB ] && . /etc/default/$UPSTART_JOB
     exec >> $LOG_FILE 2>&1
     exec start-stop-daemon -u $USER -g $GROUP -p $PID_FILE -x $VAULT -S -- agent -config=$CONFIG <%= scope['vault::service_options'] %>
